angular notes,componet preparation,databinding,Class Binding,stylebinding

--- a/Phase-4/Session-4/myapp/src/app/binding/binding.component.html
+++ b/Phase-4/Session-4/myapp/src/app/binding/binding.component.html
@@ -33,9 +33,9 @@
         <!--NgDirectives  eg: *ngFor-->
         <tr *ngFor="let p of products">
             <td [class.inStock]="true">{{p.name}}</td>
-            <td>{{p.price}}</td>
+            <td [style.font-weight]="we">{{p.price}}</td>
             <td [class.inStock1]="true">{{p.available}}</td>
-            <td>{{p.ratings}}</td>
+            <td [style.font-weight]="we">{{p.ratings}}</td>
 
         </tr>
     </tbody>
