angular notes,componet preparation,databinding,Class Binding,stylebinding,event binding

--- a/Phase-4/Session-4/myapp/src/app/binding/binding.component.html
+++ b/Phase-4/Session-4/myapp/src/app/binding/binding.component.html
@@ -40,3 +40,11 @@
         </tr>
     </tbody>
 </table>
+
+<div class="container">
+    <button class="btn btn-primary" (click)="show()">Show Div</button>
+
+    <div *ngIf="flag" style="background-color: yellowgreen;">
+        This is My Div and You have implemented Event Binding
+    </div>
+</div>
