--- a/Phase-4/Session-6/myapp2/src/app/app.component.html
+++ b/Phase-4/Session-6/myapp2/src/app/app.component.html
@@ -1,4 +1,10 @@
 <h1>Demo App</h1>
 <h2 changecolor> Hello World</h2>
 <h3 highlight> Hello</h3>
- 
+
+<div *ngIf="flag">
+    This Div is Visible
+</div>
+  
+
+  
