Service,Attribute,Structural Directives,pipes and Custom Pipes

--- a/Phase-4/Session-6/myapp2/src/app/app.component.html
+++ b/Phase-4/Session-6/myapp2/src/app/app.component.html
@@ -5,6 +5,16 @@
 <div *ngIf="flag">
     This Div is Visible
 </div>
+
+<div [ngSwitch]="'one'">
+    <div *ngSwitchCase="'one'">One is Displayed</div>
+    <div *ngSwitchCase="'two'">Two is Displayed</div>
+    <div *ngSwitchDefault>Default Option is Displayed</div>
+    </div>
+
+     
+    
+    <app-pipedemo></app-pipedemo>
   
 
   
